# MC_Assignment_3

./: README.md  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  matrix_calculator.cpp  matrix_calculator.h
app/src/main/java/com/example/matrixcalculator/: MainActivity.kt
app/src/main/java/com/example/matrixcalculator/matrix/: MatrixCalculatorScreen.kt  MatrixOperations.kt
app/src/main/java/com/example/matrixcalculator/ui/theme/: Theme.kt  Type.kt
app/src/main/java/com/example/matrixcalculator/wifi/: WifiDataManager.kt  WifiDataPoint.kt  WifiLoggerScreen.kt
app/src/main/res/values/: themes.xml
app/src/main/res/values/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
